# Learning-Based-MPC

./: .gitattributes  .gitignore  .hgignore  AUTHORS  CMakeLists.txt  Init.m  LBmpcTP.h  LICENSE  README  README.md  ReadMe.txt  build_all_N.bsh  mainLBmpcTP.cpp  report_qr_example_decoupled_all_N.bsh  run_qr_example_all_N.bsh  run_qr_example_decoupled_all_N.bsh  writeParam.m
Primal Barrier IIPM/: Init.m  LBmpcTP.h
Primal Dual IIPM/: Init.m  LBmpcTP.h  mainLBmpcTP.cpp  writeParam.m
cmake/: check_sse.cmake  log_cmake_variables.cmake
doc/: Doc_LBmpcTP_PD_noPhaseI.tex  bibliography.bib
doc/src/: mcode.sty
include/: LBmpcTP.h  LBmpcTP_parallel.h
matlab/DTL_doublePend/: define_system.m  inv_set_calc.m
matlab/LBMPC/: ROA.m  constraintsLBMPC.m  constraintsNMPC.m  costFunction.m  costNMPC.m  matOCP.m  oracle.m  oracleL2NW.m  transitionLearned.m  update_data.m
matlab/MPC4tracking/: inv_set_calc.m
matlab/Moore-Greitzer_example/: APRBSgeneration.m  L2NW.m  L2NWoracle.m  LBMPC.slx  LBMPC.slx.autosave  LBMPC_R2017b.slx  TaylorRemainder.m  collocation.fig  draw.m  drawCP.m  genTrainingData.m  init_ctrl_design.m  init_ctrl_design_simple.m  mgcmCP.m  mgcm_acado.m  ref_trajectories_APRBS.m  solveMGCM.m  test.slx  test_R2017b.slx  test_R2017b_latest.slx
matlab/NMPC_routines/: Copy_of_mgcm_nmpc.m  Copy_of_minimal_example.m  define_system.m  draw.m  example_6_20.m  example_6_26.m  example_6_34.m  example_7_2.m  example_8_1.m  example_8_12.m  example_8_16.m  (+17 more)
src/: example0.cpp  mainLBmpcTP.cpp  qr_example.cpp  qr_example_decoupled.cpp  qr_example_decoupled_crap.cpp
(+518 files in other folders)
